# cancode

./: .gitignore  README.md  pyproject.toml
deploy/: issue-ip-cert.sh  nginx-http-bootstrap.conf  nginx.conf  setup-server.sh  soup-game.service
soup_game/: __init__.py  config.py  game.py  main.py  models.py  prompts.py  store.py
soup_game/static/: game.js  style.css
soup_game/templates/: index.html
