[project]
name = "soup-game"
version = "0.1.0"
description = "A multiplayer party game: Waiter, there's a ___ in my soup!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.2.0",
    "wonderwords>=2.2.0",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.1",
]

[project.scripts]
soup-game = "soup_game.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soup_game"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.12"
